--- a/Assignments/Week_Two_Assignments/card/card.css
+++ b/Assignments/Week_Two_Assignments/card/card.css
@@ -3,23 +3,27 @@
   padding: 0;
   box-sizing: inherit;
 }
+
 html {
-  font-size: 62.5%; /*  10px */
+  font-size: 62.5%; /* 10px */
 }
 body {
   box-sizing: border-box;
+  background-color: rgb(126, 130, 134);
 }
+
 h1 {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 h2 {
-  font-size: 2rem;
+  font-size: 2.5rem;
 }
 h3 {
-  font-size: 1.5rem;
+  font-weight: bold;
 }
+h3,
 span {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: rgb(126, 130, 134);
 }
 .fas {
@@ -28,23 +32,58 @@ span {
 .fas,
 .far {
   color: rgb(102, 103, 107);
+  font-size: 2rem;
 }
 .container {
-  border: 1px solid red;
+  /* border: 1px solid red; */
   background-color: rgb(247, 247, 247);
-  /* display: flex; */
+  /* display: flex;
+  flex-wrap: wrap; */
 }
 .card__common {
-  border: 1px solid blue;
-  margin: 0 auto;
   width: 25vw;
+  margin: 0.5rem auto;
 }
 .main_card {
-  /* width: 30vw; */
-  height: 60vh;
+  min-height: 55vh;
+  box-shadow: black;
+  border-radius: 1rem;
+  background-color: white;
+  box-shadow: 0rem 0rem 0.5rem 0.1rem rgba(41, 41, 41, 0.356);
+}
+.common__space {
+  padding: 2rem;
 }
 /* BASIC CARD */
 .card--img {
   max-width: 100%;
   max-height: 50%;
+  border-radius: 1rem 1rem 0 0;
+}
+.image__description {
+  margin-top: 2rem;
+}
+.bottom_style {
+  margin-top: 2rem;
+}
+div.display_inline {
+  /* border: 1px solid black; */
+  display: flex;
+  justify-content: space-evenly;
+}
+div.display_inline > a {
+  color: rgb(118, 32, 240);
+  text-transform: uppercase;
+  font-size: bold;
+  text-decoration: none;
+}
+div.display_inline > a {
+  font-size: 1.7rem;
+}
+div.display_inline > a,
+div.display_inline > i {
+  /* border: 1px solid red; */
+  margin: 0.5rem;
+  padding: 0.5rem;
+  /* background-color: blue; */
 }
