--- a/Assignments/Week_Two_Assignments/card/card.css
+++ b/Assignments/Week_Two_Assignments/card/card.css
@@ -145,3 +145,66 @@ div.display_inline > i {
 .topic__author6 > h3 {
   margin-left: 150px;
 }
+
+/* best seller */
+.box {
+  width: 200px;
+  height: 300px;
+  position: relative;
+  border: 1px solid #bbb;
+  background: #eee;
+  margin: 20px;
+  display: inline-block;
+}
+.bestseller:before {
+  content: "";
+  z-index: -1;
+  overflow: hidden;
+  transform: rotate(-135deg);
+  width: 120px;
+  display: block;
+  background: #79a70a;
+  background: linear-gradient(#9bc90d 0%, #79a70a 100%);
+  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+  position: absolute;
+  top: 34px;
+  right: -16px;
+  clip-path: polygon(
+    120px 20px,
+    90px -10px,
+    30px -10px,
+    0px 20px,
+    10px 30px,
+    110px 30px
+  );
+  height: 20px;
+  width: 120px;
+}
+.bestseller:after {
+  content: "bestseller";
+  z-index: 1;
+  overflow: hidden;
+  font-size: 10px;
+  font-weight: bold;
+  color: #fff;
+  text-transform: uppercase;
+  text-align: center;
+  line-height: 20px;
+  transform: rotate(45deg);
+  width: 120px;
+  display: block;
+  background: #79a70a;
+  background: linear-gradient(#9bc90d 0%, #79a70a 100%);
+  box-shadow: 0 3px 10px -5px rgba(0, 0, 0, 1);
+  position: absolute;
+  top: 20px;
+  right: -30px;
+  clip-path: polygon(
+    120px 20px,
+    90px -10px,
+    30px -10px,
+    0px 20px,
+    10px 30px,
+    110px 30px
+  );
+}
